some basic tests added (only for movies routes for the time being)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Starter project for a REST API with Node.js, Restify & MongoDB",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test mocha"
   },
   "repository": {
     "type": "git",
@@ -33,5 +33,11 @@
     "restify-router": "^0.4.2",
     "url-join": "^2.0.2",
     "winston": "^2.3.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^4.1.0",
+    "nock": "^9.1.5",
+    "supertest": "^3.0.0"
   }
 }
