--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "restify-api",
   "version": "1.0.0",
   "description": "Starter project for a REST API with Node.js, Restify & MongoDB",
-  "main": "index.js",
+  "main": "app.js",
+  "engines": {
+    "node": "8.9.3"
+  },
   "scripts": {
     "test": "NODE_ENV=test mocha"
   },
